Fix style readability

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -144,7 +144,7 @@ body {
 .notes li {
 	color: white;
 	font-size: 1.5em;
-	background-color: #4593e3;
+	background-color: none;
 	list-style-type: none;
 	display: inline-block;
 	margin: 0 10px 25px;
@@ -184,6 +184,10 @@ body {
 
 .navbar-default .navbar-brand {
 	color: #fff;
+}
+
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+    color: #E1FFFD;
 }
 
 .navbar-brand {
@@ -242,9 +246,14 @@ body {
     background-size: 100%;
     color: #000000;    
 }
-.notes li:nth-child(17n+2) .note-text, .notes li:nth-child(17n+6) .note-text, .notes li:nth-child(17n+10) .note-text,  .notes li:nth-child(17n+13) .note-text, .notes li:nth-child(17n+15) .note-text {background: #fff;}
 
-.notes li:nth-child(17n+2) a, .notes li:nth-child(17n+4) a, .notes li:nth-child(17n+6) a, .notes li:nth-child(17n+8) a, .notes li:nth-child(17n+10) a {color: #000;}
+.notes li:nth-child(17n+2) .note-text, .notes li:nth-child(17n+6) .note-text, .notes li:nth-child(17n+10) .note-text,  .notes li:nth-child(17n+13) .note-text, .notes li:nth-child(17n+15) .note-text {
+    background: #fff;
+}
+
+.notes li:nth-child(17n+2) a, .notes li:nth-child(17n+4) a, .notes li:nth-child(17n+6) a, .notes li:nth-child(17n+8) a, .notes li:nth-child(17n+10) a {
+    color: #000;
+}
 
 .notes li:nth-child(17n+3) {
     background-image: url("/ainsley/tumblr_n2eaquLL0M1qg49aro1_1280.png");
@@ -255,11 +264,12 @@ body {
     background-size: 155%;
     color: #000000;    
 }
+
 .notes li:nth-child(17n+5) {
     background-image: url("/ainsley/tumblr_mq1kzfoZbT1qg49aro1_1280.png");
     background-size: 100%;
 }
-    
+
 .notes li:nth-child(17n+6) {
     background-image: url("/ainsley/tumblr_mmgoz4DpJZ1qg49aro1_1280.png");
     background-size: 155%;
@@ -270,77 +280,96 @@ body {
     background-size: 150%;
     color: #D87BFF;
 }
-.notes li:nth-child(17n+7) a {color: #D87BFF;}    
+
+.notes li:nth-child(17n+7) a {
+	color: #D87BFF;
+}    
+
 .notes li:nth-child(17n+8) {
     background-image: url("/ainsley/Fresh-Patterns_25-38.png");
     background-size: 155%;
     color: #22006C;    
 }
+
 .notes li:nth-child(17n+8) a {
     color: #22006C;    
 }
+
 .notes li:nth-child(17n+9) {
     background-image: url("/ainsley/tumblr_mvcmv0bBFl1qg49aro1_1280.png");
     background-size: 100%;
 }
+
 .notes li:nth-child(17n+10) {
     background-image: url("/ainsley/Visual-Experimental-Iterations-Series44-56.png");
     background-size: 100%;
     color: #000;
 }
 
-
 .notes li:nth-child(17n+11) {
     background-image: url("/ainsley/tumblr_mup1wnrr1B1qg49aro1_1280.png");
     background-size: 100%;
     color: #76EBB0;
 }
+
 .notes li:nth-child(17n+11) a {
     color: #76EBB0;
 }
+
 .notes li:nth-child(17n+11) .note-text {
 background: #5c7ee6;
 }
 
-
 .notes li:nth-child(17n+12) {
-    background-image: url("/ainsley/Pink-Pills.png");
-    background-size: 100%;
+    background-image: url("/ainsley/tumblr_mtlzvsgoqX1qg49aro1_1280.png");
 }
+
 .notes li:nth-child(17n+13) {
     background-image: url("/ainsley/tumblr_mlzb1hkool1qg49aro1_1280.png");
     background-size: 100%;
     color: #D54985;
 } 
+
 .notes li:nth-child(17n+13) a {
     color: #D54985;
 }
+
 .notes li:nth-child(17n+14) {
     background-image: url("/ainsley/tumblr_mq1l1kJhKi1qg49aro1_1280.png");
     background-size: 100%;
-    color: #22006C;
+    color: #000;
 }
+
 .notes li:nth-child(17n+14) a {
-    color: #22006C;
+    color: #000;
 }
+
 .notes li:nth-child(17n+15) {
     background-image: url("/ainsley/tumblr_mpmdenyLTD1qg49aro1_1280.png");
     background-size: 100%;
     color: #000;
 }
+
+.notes li:nth-child(17n+15) a {
+    color: #000;
+}
+
 .notes li:nth-child(17n+16) {
-    background-image: url("/ainsley/tumblr_n2pmpjocSs1qg49aro1_1280.png");
+    background-image: url("/ainsley/tumblr_n4iydvQnV81qg49aro1_1280.png");
     background-size: 200%;
-    color: #334499;
+    color: #aca3b7;
 }  
+
 .notes li:nth-child(17n+16) a {
-    color: #334499;
+    color: #aca3b7;
 } 
+
 .notes li:nth-child(17n) {
     background-image: url("/ainsley/tumblr_n2wi47RWZH1qg49aro1_1280.png");
     background-size: 100%;
     color: #22006C;
 }
+
 .notes li:nth-child(17n) a {
     color: #22006C;
 }
